--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
-0.1.7 - Correct sorting and parsing
-0.1.6 - Adopt newly changes from gamestar.de/gamepro.de
+0.3.1 - Added magazine videos (for Plus users)
+0.3.0 - Added search function
+0.2.5 - Bugfix
+0.2.4 - Replaced dynamic link source
+0.2.3 - Added mechanize as required
+0.2.2 - Added dynamic links
+0.2.1 - Added E3 2015 videos (still hardcoded)
+0.2.0 - Adopted by chb80 to include more video categories and support Gamestar Plus Login
+-----
 0.1.5 - Adopt newly changes from gamestar.de
 0.1.4 - Adopt newly changes from gamestar.de
 0.1.3 - Adopt change from gamestar.de
