--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <string id="30000">Youtube</string>
+    <string id="20001">Suchen</string>
+	
+	<string id="21001">Heftvideos</string>
+	
+	<string id="30000">Youtube</string>
+	
     <string id="30001">Neuste videos</string>
+	
+	<string id="30070">Meist gesehen</string>
+	<string id="30071">Meist kommentiert</string>
+	
     <string id="30002">Test-videos</string>
     <string id="30003">Preview-videos</string>
     <string id="30004">Video-specials</string>
@@ -12,8 +21,22 @@
     <string id="30009">Technik-checks</string>
     <string id="30010">Boxenstopp</string>
     <string id="30011">Trailer</string>
+	
+	<string id="30080">Frisch gestrichen</string>
+	<string id="30081">Was ist...</string>
+	<string id="30082">News</string>
+	<string id="30083">Gamewatch</string>
+	<string id="30084">Monatsausblick</string>
+	<string id="30085">Grafikpracht</string>
+	<string id="30086">Gamestar TV</string>
+	
     <string id="30100">Gamestar</string>
     <string id="30101">Gamepro</string>
     <string id="30102">Youtube</string>
-    <string id="30102">Quellname anzeigen</string>
+    <string id="30103">Quellname anzeigen</string>
+	
+	<string id="30200">Gamestar Plus Benutzername</string>		
+	<string id="30201">Gamestar Plus Passwort</string>
+	
+	<string id="30900">Älter als:</string>
 </strings>
