--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -8,7 +8,7 @@
 	
     <string id="30001">Latest</string>
 	
-	<string id="30070">Most popular</string>
+	<string id="30070">Trending</string>
 	<string id="30071">Most commented</string>
 	
     <string id="30002">Reviews</string>
