--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -8,7 +8,7 @@
 	
     <string id="30001">Neuste videos</string>
 	
-	<string id="30070">Meist gesehen</string>
+	<string id="30070">Trending</string>
 	<string id="30071">Meist kommentiert</string>
 	
     <string id="30002">Test-videos</string>
